<resources>
    <string name="app_name">ui test</string>
    <string name="button">button</string>
    <string name="Button">Button</string>
    <string name="Button2">Button2</string>
    <string name="TextView">TextView</string>
    <string name="first">first</string>
    <string name="EditText">EditText</string>
    <string name="EditText1">EditText1</string>
    <string name="button3">button3</string>
    <string name="testButton">testButton</string>
    <string name="TextView1">textView1</string>
    <string name="TextView2">TextView2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button4">button4</string>
    <string name="TextView4">TextView4</string>
</resources>